added main menu

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,10 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+/tetris_hack/Assets/PolygonSciFiSpace
+tetris_hack/Assets/\!GET_MORE_ASSETS_FOR_FREE.meta
+tetris_hack/Assets/\!GET_MORE_ASSETS_FOR_FREE/DEV FREEDOM.txt
+tetris_hack/Assets/\!GET_MORE_ASSETS_FOR_FREE/DEV FREEDOM.txt.meta
+tetris_hack/Assets/\!GET_MORE_ASSETS_FOR_FREE/DevFreedom.club -  UE and Unity developers community. Q&A, Assets, Tutorials.url
+tetris_hack/Assets/\!GET_MORE_ASSETS_FOR_FREE/DevFreedom.club -  UE and Unity developers community. Q&A, Assets, Tutorials.url.meta
+/tetris_hack/Assets/TextMesh Pro
