--- a/tetris_hack/Packages/manifest.json
+++ b/tetris_hack/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.prenominal.realtimecsg": "https://github.com/LogicalError/realtime-CSG-for-unity.git",
     "com.unity.ai.navigation": "2.0.5",
     "com.unity.cinemachine": "3.1.2",
     "com.unity.collab-proxy": "2.6.0",
@@ -8,6 +9,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.postprocessing": "3.4.0",
+    "com.unity.probuilder": "6.0.4",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
